<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
            android:key="@string/pref_display_name_key"
            android:title="@string/pref_display_name"
            android:defaultValue="@string/pref_display_name_default"
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1"/>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
            android:key="@string/pref_rec_duration_key"
            android:title="@string/pref_rec_duration"
            android:entries="@array/pref_rec_duration_titles"
            android:entryValues="@array/pref_rec_duration_values"
            android:defaultValue="@string/pref_rec_duration_default"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"/>
    <ListPreference
            android:key="@string/pref_language_key"
            android:title="@string/pref_language"
            android:entries="@array/pref_language_titles"
            android:entryValues="@array/pref_language_values"
            android:defaultValue="@string/pref_language_default"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"/>

</PreferenceScreen>
